--- a/thorn_core/build.gradle
+++ b/thorn_core/build.gradle
@@ -22,22 +22,25 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:27.1.0'
-    compile 'com.android.support:support-v4:27.1.0'
-    compile 'com.android.support:recyclerview-v7:27.1.0'
-    compile 'com.android.support:design:27.1.0'
-    compile 'com.android.support:multidex:1.0.3'
+    api 'com.android.support:appcompat-v7:27.1.0'
+    api 'com.android.support:support-v4:27.1.0'
+    api 'com.android.support:recyclerview-v7:27.1.0'
+    api 'com.android.support:design:27.1.0'
+    api 'com.android.support:multidex:1.0.3'
     // ViewModel and LiveData
-    implementation "android.arch.lifecycle:extensions:1.1.0"
+    api "android.arch.lifecycle:extensions:1.1.0"
     // alternatively, just ViewModel
 //    implementation "android.arch.lifecycle:viewmodel:1.1.0"
     // alternatively, just LiveData
 //    implementation "android.arch.lifecycle:livedata:1.1.0"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
     // Room (use 1.1.0-alpha3 for latest alpha)
-    implementation "android.arch.persistence.room:runtime:1.1.0-alpha3"
+    api "android.arch.persistence.room:runtime:1.1.0-alpha3"
 //    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     // Paging
 //    implementation "android.arch.paging:runtime:1.0.0-alpha6"
-
+    provided 'com.google.auto.value:auto-value:1.4.1'
+    //图片加载
+    api 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 }
