--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         jcenter()
+        google()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
@@ -10,19 +11,24 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
         }
+    }
+    ext {
+        buildToolsVersion = "27.0.3"
+        minSdkVersion = 15
+        targetSdkVersion = 27
+        compileSdkVersion = 27
+        supportVersion = "27.1.0"
     }
 }
 
