--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,10 @@ buildscript {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.0'
     }
 }
 
@@ -22,6 +23,7 @@ allprojects {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        maven { url "https://jitpack.io" }
     }
     ext {
         buildToolsVersion = "27.0.3"
