--- a/thorn_core/build.gradle
+++ b/thorn_core/build.gradle
@@ -19,7 +19,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     api "com.android.support:appcompat-v7:$supportVersion"
     api "com.android.support:support-v4:$supportVersion"
     api "com.android.support:recyclerview-v7:$supportVersion"
@@ -38,7 +38,7 @@ dependencies {
 //    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     // Paging
 //    implementation "android.arch.paging:runtime:1.0.0-alpha6"
-    provided 'com.google.auto.value:auto-value:1.4.1'
+    compileOnly 'com.google.auto.value:auto-value:1.4.1'
     annotationProcessor 'com.google.auto.value:auto-value:1.4.1'
     //图片加载
     api 'com.github.bumptech.glide:glide:4.6.1'
@@ -48,9 +48,9 @@ dependencies {
     api 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     //leakcanary
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    debugApi 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseApi 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    testApi 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     //网络请求依赖
     api 'com.squareup.okio:okio:1.14.0'
     api 'com.squareup.okhttp3:okhttp:3.10.0'
