--- a/thorn_core/build.gradle
+++ b/thorn_core/build.gradle
@@ -19,13 +19,14 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api fileTree(dir: 'libs', include: ['*.jar'])
     api "com.android.support:appcompat-v7:$supportVersion"
     api "com.android.support:support-v4:$supportVersion"
     api "com.android.support:recyclerview-v7:$supportVersion"
     api "com.android.support:cardview-v7:$supportVersion"
     api "com.android.support:design:$supportVersion"
     api 'com.android.support:multidex:1.0.3'
+    api 'com.android.support.constraint:constraint-layout:1.0.2'
     // ViewModel and LiveData
     api "android.arch.lifecycle:extensions:1.1.0"
     // alternatively, just ViewModel
@@ -43,14 +44,10 @@ dependencies {
     //图片加载
     api 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
-    implementation 'com.github.bumptech.glide:okhttp3-integration:4.6.1'
+    api 'com.github.bumptech.glide:okhttp3-integration:4.6.1'
     //butterknife
     api 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-    //leakcanary
-    debugApi 'com.squareup.leakcanary:leakcanary-android:1.5'
-    releaseApi 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    testApi 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     //网络请求依赖
     api 'com.squareup.okio:okio:1.14.0'
     api 'com.squareup.okhttp3:okhttp:3.10.0'
