--- a/thorn_ui/build.gradle
+++ b/thorn_ui/build.gradle
@@ -19,14 +19,18 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    api project(':thorn_core')
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':thorn_core')
     //Banner-https://github.com/bingoogolapple/BGABanner-Android
 //    implementation 'cn.bingoogolapple:bga-banner:2.2.4@aar'
     //Banner
-    implementation 'com.youth.banner:banner:1.4.10'
+    api 'com.youth.banner:banner:1.4.10'
     //Qmui-https://github.com/QMUI/QMUI_Android
-    implementation 'com.qmuiteam:qmui:1.1.0'
+    api 'com.qmuiteam:qmui:1.1.0'
     //RecyclerView-https://github.com/CymChad/BaseRecyclerViewAdapterHelper
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.36'
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.36'
+    //Divider-https://github.com/yqritc/RecyclerView-FlexibleDivider
+    api 'com.yqritc:recyclerview-flexibledivider:1.4.0'
+    //bottomnavigation-https://github.com/aurelhubert/ahbottomnavigation
+    api 'com.aurelhubert:ahbottomnavigation:2.1.0'
 }
