--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,6 +112,7 @@ configurations.all {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':thorn_ui')
+    implementation project(':thorn_core')
     //leakcanary
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
