--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,6 @@
         <meta-data
             android:name="android.max_aspect"
             android:value="2.1"/>
-
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities=".fileprovider"
@@ -60,7 +59,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".TestActivity">
+        <activity
+            android:name=".Main4Activity"
+            android:theme="@style/AppTheme.AppBarOverlay"
+            android:label="@string/title_activity_main4">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
