--- a/thorn_core/build.gradle
+++ b/thorn_core/build.gradle
@@ -8,6 +8,11 @@ android {
         targetSdkVersion parent.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ moduleName : project.getName() ]
+            }
+        }
     }
 
     buildTypes {
@@ -20,25 +25,24 @@ android {
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
-    //Support
     api "com.android.support:appcompat-v7:$supportVersion"
     api "com.android.support:support-v4:$supportVersion"
     api "com.android.support:recyclerview-v7:$supportVersion"
     api "com.android.support:cardview-v7:$supportVersion"
     api "com.android.support:design:$supportVersion"
+    api "com.android.support:support-vector-drawable:$supportVersion"
     api "com.android.support:palette-v7:$supportVersion" //抽取颜色
     api 'com.android.support:multidex:1.0.3'
-    api 'com.android.support.constraint:constraint-layout:1.0.2'
-
+    api 'com.android.support.constraint:constraint-layout:1.1.0'
     // ViewModel and LiveData
-    api "android.arch.lifecycle:extensions:1.1.0"
+    api "android.arch.lifecycle:extensions:1.1.1"
     // alternatively, just ViewModel
 //    implementation "android.arch.lifecycle:viewmodel:1.1.0"
     // alternatively, just LiveData
 //    implementation "android.arch.lifecycle:livedata:1.1.0"
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
     // Room (use 1.1.0-alpha3 for latest alpha)
-    api "android.arch.persistence.room:runtime:1.1.0-alpha3"
+    api "android.arch.persistence.room:runtime:1.1.0-beta2"
 //    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     // Paging
 //    implementation "android.arch.paging:runtime:1.0.0-alpha6"
@@ -51,22 +55,21 @@ dependencies {
     //butterknife
     api 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-
     //网络请求依赖
     api 'com.squareup.okio:okio:1.14.0'
     api 'com.squareup.okhttp3:okhttp:3.10.0'
     api 'com.squareup.retrofit2:retrofit:2.4.0'
-    api 'com.squareup.retrofit2:converter-scalars:2.4.0'
-    api 'com.squareup.retrofit2:converter-gson:2.4.0'
-    api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     api 'com.google.code.gson:gson:2.8.2'
+    api 'com.squareup.retrofit2:converter-scalars:2.4.0'
+    api "com.squareup.retrofit2:converter-gson:2.4.0"
+    api "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
 
-    //rx2
+    //Rx系列
     api "io.reactivex.rxjava2:rxandroid:2.0.2"
     api "io.reactivex.rxjava2:rxjava:2.1.12"
     api "com.trello.rxlifecycle2:rxlifecycle:2.2.1"
     api "com.trello.rxlifecycle2:rxlifecycle-android:2.2.1"
-    api "com.trello.rxlifecycle2:rxlifecycle-components:2.2.1"
+//    api "com.trello.rxlifecycle2:rxlifecycle-components:2.2.1"
     api "com.github.VictorAlbertos.RxCache:runtime:1.8.3-2.x"
     api "com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar"
     api "me.jessyan:rxerrorhandler:2.1.1"
@@ -74,5 +77,12 @@ dependencies {
     //工具包-https://github.com/Blankj/AndroidUtilCode/blob/master/utilcode/README-CN.md
     //更多工具类参考 https://github.com/Blankj/AndroidUtilCode/blob/master/subutil/README-CN.md
     api 'com.blankj:utilcode:1.13.6'
-
+    api 'com.jakewharton.timber:timber:4.7.0'
+    api 'com.orhanobut:logger:2.2.0'
+    //EventBus
+    api "org.simple:androideventbus:1.0.5.1"
+    //Arouter
+    api 'com.google.dagger:dagger:2.14.1'
+//    compile 'com.alibaba:arouter-api:1.3.1'
+//    annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
 }
