--- a/thorn_ui/build.gradle
+++ b/thorn_ui/build.gradle
@@ -35,4 +35,7 @@ dependencies {
 //    api 'com.aurelhubert:ahbottomnavigation:2.1.0'
 //    Fragmentation-https://github.com/YoKeyword/Fragmentation
     api 'me.yokeyword:fragmentation:1.3.3'
+    //动画 -https://github.com/daimajia/AndroidViewAnimations
+    api 'com.daimajia.easing:library:2.0@aar'
+    api 'com.daimajia.androidanimations:library:2.3@aar'
 }
